[gd_scene load_steps=8 format=3 uid="uid://br4ounypvhqfd"]

[ext_resource type="Script" path="res://weapons/bullet.gd" id="1_m8tfp"]
[ext_resource type="Texture2D" uid="uid://cbd1y5a5abpsb" path="res://weapons/fire_poop.png" id="3_50p6o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_numuc"]

[sub_resource type="Animation" id="Animation_1bgqr"]
resource_name = "fire_anim"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cv3h4"]
_data = {
"fire_anim": SubResource("Animation_1bgqr")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_moof5"]
radius = 9.64154

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbhns"]
size = Vector2(7.05952, 42)

[node name="body" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_m8tfp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.2, 0.2)
shape = SubResource("RectangleShape2D_numuc")

[node name="fire_poop" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_50p6o")
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="fire_poop"]
libraries = {
"": SubResource("AnimationLibrary_cv3h4")
}

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(4.87474, 1.34108)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.0257, 0)
shape = SubResource("CapsuleShape2D_moof5")

[node name="return_zone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="return_zone"]
position = Vector2(56.3988, 0)
scale = Vector2(1.02024, 1.12026)
shape = SubResource("RectangleShape2D_xbhns")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="return_zone" to="." method="_on_return_zone_body_entered"]
